# Katya-

./: .codeberg.yml  .codeclimate.yml  .drone.yml  .editorconfig  .flutter-plugins  .flutter-plugins-dependencies  .gitee.yml  .gitlab-ci.yml  .gittea.yml  .gitverse.yml  .licenserc.yaml  .markdownlint.json  .pre-commit-config.yaml  .sourcecraft.yml  ADVANCED_TODO.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.txt  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contributing.md  Dockerfile  FAQ.md  GLOSSARY.md  Getting_Started.md  Home.md  INSTALL.md  Katya.iss  README.md  RELEASING.md  Roadmap.md  SUPPORT.md  TODO-ADDITIONAL.md  TODO.md  UPGRADING.md  analysis_options.yaml  bitbucket-pipelines.yml  cliff.toml  codemagic.yaml  (+9 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  release-drafter.yml
.snap/: snapcraft.yaml
accessibility/: README.md
ai/: README.md
analytics/: README.md
android/: build.gradle  gradle.properties  key.properties  local.properties  settings.gradle  upload.jks
android/olm/python/: .gitlab-ci.yml  MANIFEST.in  README.md  make_sdist.sh  olm_build.py  pyproject.toml  setup.cfg  setup.py
android/olm/python/olm/: __version__.py  account.py  group_session.py  pk.py  sas.py  session.py  utility.py
android/olm/python/tests/: utils_test.py
api/: README.md  authentication_guide.md  openapi.yaml  rate_limiting_guide.md
aurora/: CMakeLists.txt
backlogs/: README.md
backup/: README.md
benchmarks/: README.md  run_benchmarks.sh
blockchain/: README.md
(+1104 files in other folders)
