[project]
name = "python-olm"
version = "3.2.15"
description = "python CFFI bindings for the olm cryptographic ratchet library"
authors = [{name = "Damir Jelić", email = "poljar@termina.org.uk"}]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Communications",
]
dependencies = ["cffi>=1.0.0"]

[build-system]
requires = ["setuptools", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"
